--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>304 Tagged Open Ruby Bugs as of 2021-07-27 03:42:14 +0900</title>
+<title>307 Tagged Open Ruby Bugs as of 2021-07-27 23:52:11 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -15,9 +15,9 @@
 <input type="submit" value="ext" />
 <input type="submit" value="test" />
 <input type="submit" value="thread" />
-<input type="submit" value="encoding" />
 <input type="submit" value="notbug" />
 <input type="submit" value="cygwin" />
+<input type="submit" value="encoding" />
 <input type="submit" value="regexp" />
 <input type="submit" value="perf" />
 <input type="submit" value="refine" />
@@ -25,17 +25,17 @@
 <input type="submit" value="fiber" />
 <input type="submit" value="autoload" />
 <input type="submit" value="parser" />
+<input type="submit" value="doc" />
 <input type="submit" value="jit" />
 <input type="submit" value="backport" />
-<input type="submit" value="doc" />
 <input type="submit" value="irb" />
 <input type="submit" value="misc" />
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">304</span> matched)
+(<span id="matched">307</span> matched)
 <table>
-<caption>304 Tagged Open Ruby Bugs as of 2021-07-27 03:42:14 +0900</caption>
+<caption>307 Tagged Open Ruby Bugs as of 2021-07-27 23:52:11 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -44,6 +44,20 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" os/arch ">
+<td><a href="https://bugs.ruby-lang.org/issues/18049">18049</a>
+</td>
+<td>os/arch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18049">Cannot build ruby-3.0.2 on NetBSD</a>
+</td>
+</tr>
+<tr class=" build ">
+<td><a href="https://bugs.ruby-lang.org/issues/18046">18046</a>
+</td>
+<td>build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18046">Missing include leads to build breakage of glib2 on head</a>
+</td>
+</tr>
 <tr class=" notbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/18041">18041</a>
 </td>
@@ -70,13 +84,6 @@
 </td>
 <td>tracepoint</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18031">Nested TracePoint#enable with target crashes</a>
-</td>
-</tr>
-<tr class=" encoding ">
-<td><a href="https://bugs.ruby-lang.org/issues/18028">18028</a>
-</td>
-<td>encoding</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18028">test/ruby/enc/test_emoji_breaks.rb does not deal with Unicode ranges in file emoji-sequences.txt</a>
 </td>
 </tr>
 <tr class=" encoding ">
@@ -1297,6 +1304,13 @@
 <td><a href="https://bugs.ruby-lang.org/issues/14543">`make commit` show error of `common-srcs`</a>
 </td>
 </tr>
+<tr class=" doc ">
+<td><a href="https://bugs.ruby-lang.org/issues/14500">14500</a>
+</td>
+<td>doc</td>
+<td><a href="https://bugs.ruby-lang.org/issues/14500">Missing Regexp documentation and clarification on behavior of \K for edge case</a>
+</td>
+</tr>
 <tr class=" os/arch build ">
 <td><a href="https://bugs.ruby-lang.org/issues/14480">14480</a>
 </td>
@@ -1414,6 +1428,13 @@
 </td>
 <td>test</td>
 <td><a href="https://bugs.ruby-lang.org/issues/13864">Rinda multicast test failures due to missing default route</a>
+</td>
+</tr>
+<tr class=" lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/13810">13810</a>
+</td>
+<td>lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/13810">Inconsistency between Date and Time.strftime(&quot;%v&quot;)</a>
 </td>
 </tr>
 <tr class=" ext ">
