--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>307 Tagged Open Ruby Bugs as of 2021-07-27 23:52:11 +0900</title>
+<title>304 Tagged Open Ruby Bugs as of 2021-07-29 00:34:57 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -25,17 +25,17 @@
 <input type="submit" value="fiber" />
 <input type="submit" value="autoload" />
 <input type="submit" value="parser" />
-<input type="submit" value="doc" />
 <input type="submit" value="jit" />
 <input type="submit" value="backport" />
+<input type="submit" value="doc" />
 <input type="submit" value="irb" />
 <input type="submit" value="misc" />
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">307</span> matched)
+(<span id="matched">304</span> matched)
 <table>
-<caption>307 Tagged Open Ruby Bugs as of 2021-07-27 23:52:11 +0900</caption>
+<caption>304 Tagged Open Ruby Bugs as of 2021-07-29 00:34:57 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -44,10 +44,17 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" os/arch ">
+<tr class=" os/arch build notbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/18050">18050</a>
+</td>
+<td>os/arch build notbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18050">Cannot build ruby-2.7.4 on NetBSD</a>
+</td>
+</tr>
+<tr class=" os/arch build notbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/18049">18049</a>
 </td>
-<td>os/arch</td>
+<td>os/arch build notbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18049">Cannot build ruby-3.0.2 on NetBSD</a>
 </td>
 </tr>
@@ -112,13 +119,6 @@
 </td>
 <td>refine</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18021">Mixins in Refinements: possibly multiple bugs, workarounds are awkward</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/18018">18018</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18018">Float#floor / truncate sometimes result that is too small.</a>
 </td>
 </tr>
 <tr class=" regexp ">
@@ -989,13 +989,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/15787">LoadError by EPERM on read-only volume</a>
 </td>
 </tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/15779">15779</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15779">After NoMemoryError, ruby freezes and takes 100% CPU</a>
-</td>
-</tr>
 <tr class=" parser ">
 <td><a href="https://bugs.ruby-lang.org/issues/15764">15764</a>
 </td>
@@ -1304,13 +1297,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/14543">`make commit` show error of `common-srcs`</a>
 </td>
 </tr>
-<tr class=" doc ">
-<td><a href="https://bugs.ruby-lang.org/issues/14500">14500</a>
-</td>
-<td>doc</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14500">Missing Regexp documentation and clarification on behavior of \K for edge case</a>
-</td>
-</tr>
 <tr class=" os/arch build ">
 <td><a href="https://bugs.ruby-lang.org/issues/14480">14480</a>
 </td>
@@ -1430,10 +1416,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/13864">Rinda multicast test failures due to missing default route</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/13810">13810</a>
 </td>
-<td>lib</td>
+<td>patch ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/13810">Inconsistency between Date and Time.strftime(&quot;%v&quot;)</a>
 </td>
 </tr>
@@ -1827,13 +1813,6 @@
 </td>
 <td>lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/10919">[gem install] installs multipe platforms</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/10902">10902</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/10902">require(&quot;enumerator&quot;) scans LOAD_PATH 2x on every invocation</a>
 </td>
 </tr>
 <tr class=" patch lib ">
