--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>299 Tagged Open Ruby Bugs as of 2021-07-30 07:23:18 +0900</title>
+<title>301 Tagged Open Ruby Bugs as of 2021-08-07 01:47:07 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -8,8 +8,8 @@
 <input type="submit" value="patch" />
 <input type="submit" value="win" />
 <input type="submit" value="build" />
-<input type="submit" value="maybenotbug" />
 <input type="submit" value="ractor" />
+<input type="submit" value="maybenotbug" />
 <input type="submit" value="os/arch" />
 <input type="submit" value="lib" />
 <input type="submit" value="ext" />
@@ -24,18 +24,17 @@
 <input type="submit" value="perf" />
 <input type="submit" value="fiber" />
 <input type="submit" value="autoload" />
-<input type="submit" value="parser" />
 <input type="submit" value="jit" />
-<input type="submit" value="backport" />
+<input type="submit" value="parser" />
 <input type="submit" value="doc" />
 <input type="submit" value="irb" />
 <input type="submit" value="misc" />
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">299</span> matched)
+(<span id="matched">301</span> matched)
 <table>
-<caption>299 Tagged Open Ruby Bugs as of 2021-07-30 07:23:18 +0900</caption>
+<caption>301 Tagged Open Ruby Bugs as of 2021-08-07 01:47:07 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -44,6 +43,41 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" os/arch build ">
+<td><a href="https://bugs.ruby-lang.org/issues/18062">18062</a>
+</td>
+<td>os/arch build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18062">Ruby with enabled LTO segfaults during build</a>
+</td>
+</tr>
+<tr class=" os/arch ">
+<td><a href="https://bugs.ruby-lang.org/issues/18061">18061</a>
+</td>
+<td>os/arch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18061">Execshield test: libruby.so.N.N.N: FAIL: property-note test because no .note.gnu.property section found</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18060">18060</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18060">Infinite loop when b_return TracePoint raises</a>
+</td>
+</tr>
+<tr class=" jit ">
+<td><a href="https://bugs.ruby-lang.org/issues/18058">18058</a>
+</td>
+<td>jit</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18058">3.1.0-dev with MJIT enabled Zlib::BufError during `gem install`</a>
+</td>
+</tr>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18053">18053</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18053">Crashes and infinite loops when generating partial backtraces in Ruby 3.0+</a>
+</td>
+</tr>
 <tr class=" os/arch build notbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/18050">18050</a>
 </td>
@@ -56,13 +90,6 @@
 </td>
 <td>os/arch build notbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18049">Cannot build ruby-3.0.2 on NetBSD</a>
-</td>
-</tr>
-<tr class=" build ">
-<td><a href="https://bugs.ruby-lang.org/issues/18046">18046</a>
-</td>
-<td>build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18046">Missing include leads to build breakage of glib2 on head</a>
 </td>
 </tr>
 <tr class=" notbug ">
@@ -90,7 +117,7 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18031">18031</a>
 </td>
 <td>tracepoint</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18031">Nested TracePoint#enable with target crashes</a>
+<td><a href="https://bugs.ruby-lang.org/issues/18031">Nested TracePoint#enable with define_method target crashes</a>
 </td>
 </tr>
 <tr class=" encoding ">
@@ -133,13 +160,6 @@
 </td>
 <td>regexp</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18012">Case-insensitive character classes can only match multiple code points when top-level character class is not negated</a>
-</td>
-</tr>
-<tr class=" core maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/18011">18011</a>
-</td>
-<td>core maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18011">`Method#parameters` is incorrect for forwarded arguments</a>
 </td>
 </tr>
 <tr class=" regexp ">
@@ -483,13 +503,6 @@
 </td>
 <td>fiber</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17568">Thread.handle_interrupt is per-Thread but should probably be per-Fiber</a>
-</td>
-</tr>
-<tr class=" backport ">
-<td><a href="https://bugs.ruby-lang.org/issues/17561">17561</a>
-</td>
-<td>backport</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17561">The timeout option for Addrinfo.getaddrinfo is not reliable on Ruby 2.7.2</a>
 </td>
 </tr>
 <tr class=" core maybenotbug ">
