--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>297 Tagged Open Ruby Bugs as of 2021-08-07 07:41:40 +0900</title>
+<title>301 Tagged Open Ruby Bugs as of 2021-08-10 06:10:13 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -8,9 +8,9 @@
 <input type="submit" value="patch" />
 <input type="submit" value="win" />
 <input type="submit" value="build" />
+<input type="submit" value="os/arch" />
 <input type="submit" value="ractor" />
 <input type="submit" value="maybenotbug" />
-<input type="submit" value="os/arch" />
 <input type="submit" value="lib" />
 <input type="submit" value="ext" />
 <input type="submit" value="test" />
@@ -32,9 +32,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">297</span> matched)
+(<span id="matched">301</span> matched)
 <table>
-<caption>297 Tagged Open Ruby Bugs as of 2021-08-07 07:41:40 +0900</caption>
+<caption>301 Tagged Open Ruby Bugs as of 2021-08-10 06:10:13 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -43,6 +43,34 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" build os/arch ">
+<td><a href="https://bugs.ruby-lang.org/issues/18073">18073</a>
+</td>
+<td>build os/arch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18073">test/ruby/test_jit.rb: &quot;error: invalid use of &#39;__builtin_va_arg_pack ()&#39;&quot; on Ruby 2.7.4 on gcc 4.8.5</a>
+</td>
+</tr>
+<tr class=" build os/arch ">
+<td><a href="https://bugs.ruby-lang.org/issues/18072">18072</a>
+</td>
+<td>build os/arch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18072">Build error on Fedora 34 x86_64</a>
+</td>
+</tr>
+<tr class=" notbug core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18067">18067</a>
+</td>
+<td>notbug core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18067">Composite procs with `instance_exec` aren&#39;t executed within the context of the receiver</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18066">18066</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18066">Load did_you_mean/error_highlight even with --disable-gems</a>
+</td>
+</tr>
 <tr class=" os/arch build ">
 <td><a href="https://bugs.ruby-lang.org/issues/18062">18062</a>
 </td>
