--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>301 Tagged Open Ruby Bugs as of 2021-08-10 06:10:13 +0900</title>
+<title>299 Tagged Open Ruby Bugs as of 2021-08-12 01:54:51 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -32,9 +32,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">301</span> matched)
+(<span id="matched">299</span> matched)
 <table>
-<caption>301 Tagged Open Ruby Bugs as of 2021-08-10 06:10:13 +0900</caption>
+<caption>299 Tagged Open Ruby Bugs as of 2021-08-12 01:54:51 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -50,13 +50,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18073">test/ruby/test_jit.rb: &quot;error: invalid use of &#39;__builtin_va_arg_pack ()&#39;&quot; on Ruby 2.7.4 on gcc 4.8.5</a>
 </td>
 </tr>
-<tr class=" build os/arch ">
-<td><a href="https://bugs.ruby-lang.org/issues/18072">18072</a>
-</td>
-<td>build os/arch</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18072">Build error on Fedora 34 x86_64</a>
-</td>
-</tr>
 <tr class=" notbug core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18067">18067</a>
 </td>
@@ -64,10 +57,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18067">Composite procs with `instance_exec` aren&#39;t executed within the context of the receiver</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18066">18066</a>
 </td>
-<td>core</td>
+<td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18066">Load did_you_mean/error_highlight even with --disable-gems</a>
 </td>
 </tr>
@@ -1534,13 +1527,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/12582">OpenSSL Authenticated Encryption should check for tag length</a>
 </td>
 </tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/12540">12540</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/12540">test failures when SHARABLE_MIDDLE_SUBSTRING=1</a>
-</td>
-</tr>
 <tr class=" cygwin ">
 <td><a href="https://bugs.ruby-lang.org/issues/12506">12506</a>
 </td>
@@ -1555,10 +1541,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/12500">TestProcess#test_aspawn_too_long_path fails on mips with &quot;argument too big&quot;</a>
 </td>
 </tr>
-<tr class=" test ">
+<tr class=" test os/arch ">
 <td><a href="https://bugs.ruby-lang.org/issues/12473">12473</a>
 </td>
-<td>test</td>
+<td>test os/arch</td>
 <td><a href="https://bugs.ruby-lang.org/issues/12473">Test failure on fedora with TestTimeExtension#test_huge_precision</a>
 </td>
 </tr>
